Revert "[Fx] fixed a problem that checkbox UI overflows horizontally."
This reverts commit cc244e41d32d020fb3117b7a77d40c4f2b56500f.

--- a/src/comm-filter.css
+++ b/src/comm-filter.css
@@ -23,10 +23,7 @@
 }
 
 #PLUGIN_COMM_FILTER>input[name=omni] {
-  flex-grow: 1;
-  flex-shrink: 1;
-  flex-basis: 0;
-  min-width: 6ex;
+  flex: auto;
 }
 
 #PLUGIN_COMM_FILTER>input[name=omni]:focus~label {
